tests/miniJava/pos/000765_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) System.out.println ( { } ) ; else java = 0 ; } }
