tests/miniJava/neg/000681_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = else new java ( ) ; } }
